[package]
name = "hello-macro"
version = "0.1.0"
authors = ["Bruce A. MacNaughton <bmacnaughton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello-macro-macro = {path = "hello-macro-macro"}
enum-iterator = {path = "enum-iterator"}
